--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/text3.jpg" alt="">
-            <p class = "img-creator">Creator </p>
+            <p class = "img-creator">예시 </p>
           </a>
         </div>
        
